@@ -18,7 +18,6 @@ package au.gov.asd.tac.constellation.graph.utilities.perspectives;
 import au.gov.asd.tac.constellation.graph.utilities.perspectives.PerspectiveModel.Perspective;
 import au.gov.asd.tac.constellation.utilities.graphics.Vector3f;
 import java.util.ArrayList;
-import java.util.stream.Collectors;
 import javax.swing.AbstractListModel;
 
 /**
@@ -34,7 +33,7 @@ class PerspectiveModel extends AbstractListModel<Perspective> {
     }
 
     public PerspectiveModel(final PerspectiveModel other) {
-        perspectives = (ArrayList<Perspective>) other.perspectives.stream().collect(Collectors.toList());
+        perspectives = (ArrayList<Perspective>) other.perspectives.stream().toList();
     }
 
     @Override
